# VLM-1

./: .gitignore  CLAUDE.md  DEBUG_VISUALIZER.md  HANDOVER.md  INDEX.md  LEARNINGS.md  QUICKSTART.md  QUICKSTART_S3.md  QUICKSTART_VISUALIZER.md  README_PHYSICS_ANALYZER.md  README_VISUALIZER.md  analyze_handball.py  convert_raw_gemini.py  copy_test_files.sh  gemgenprompt  gemini_batch_analyzer.py  gemini_cache_analyzer.py  gemini_cache_analyzer_v2.py  gemini_context_zones.md  gemini_generated_prompt.md  gemini_physics_analyzer.py  gemini_s3_analyzer.py  inspect_sdk.py  json_format.md  list_models.py  openrouter_analyzer.py  physics_prompt.md  physics_to_events.py  process_s3_handball.sh  pyproject.toml  start_visualizer.sh  test_visualizer.sh  validate_physics_output.py  validate_results.py  verify_physics_analyzer.py  visualize_analysis.py
archive/: analyze_handball.py  analyzer.py  convert_raw_gemini.py  gemini_cache_analyzer.py  inspect_meta.py  test_gemini_key.py  test_model_availability.py  test_server.py  verify_setup.sh  visualize_analysis.py
docs/: INDEX.md  QUICKSTART_VISUALIZER.md  README_GEMINI_BATCH.md  README_PHYSICS_ANALYZER.md  README_S3_INTEGRATION.md  README_VISUALIZER.md  VISUALIZATION_FIXES.md  ZONE_SYSTEM_VISUALIZER.md  defensive_roles_definition.md  handball_zones_definition.md
inference/: __init__.py  event_detector.py  role_assigner.py  team_classifier.py  zone_validator.py
physics_visualizer/: server.py
prompts/: gemini_context_zones.md  physics_prompt.md
results_physics/: ADF-11_events.json  ADF-11_physics.json  DEFENDER-TEST_events.json  (+1 more)
(+30 files in other folders)
